@@ -1,18 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX notify-send.eselect-0.1 441 SHA256 94f785ab9ad739fe0ecbf965c337a13634795b3cec7537c4cbaa4184ecb7cde0 SHA512 3dba5b92d2afcf0980f6dd346acf08ac7ce0c42b7d1814950fdac6763571fd3ec1811f81c829a8d18cb8cc11007e86d26940d2b10753cc4464db32991555797f WHIRLPOOL 96393abdaac7da51af818b1b0ad25e105a4dcd77fa972aab9b6cfb762e45aaed2f1210f76567c9ceb60a29960fe29c6fc1ece14dc48edcd6778e5c6591fc48f4
-EBUILD eselect-notify-send-0.1.ebuild 800 SHA256 f9e7cef0a79a2bc07ca61d6aa944fa5e795d8450c9ada466a33d0aab4159dc29 SHA512 1f53032fc2c8458940722b0c0a8bff934895e1b32909dbe7c8b33699a35de77adaaad7a7570d1078ee6033f59bd7cf594a37854cf8c014bbc6fef6e3d970578b WHIRLPOOL 5824c2b314bd7fb6fbcea461be840f6a98c3da2b7eab286366593efc5e8f7e388f4097ae33e6c2a1504b872fffd19ee8c6ad5bb733b25ddab16d341f3b098fd9
-MISC ChangeLog 443 SHA256 b9ba103c1bf59cf93ddac2c3f96c9c5866924c67da082f73b2b7b4ea7afd8559 SHA512 97fc48bd8d3c3e8359e43980bd10ec69120161ac8406470883d42269e63bbadabae26ce48d4f84558cc8f258282e04107e206d4466b12e6c6c4cb1c252e5d5dc WHIRLPOOL 8ea5d2da400181fa0d9283bd3f8b0e977caadeb0ee941e7d0a00f3d285a39d1a0a1a3d9260d6aa3456b65945ff07eaf62dd0c4c1a3c30b1e9d9a0d7186a6e701
+EBUILD eselect-notify-send-0.1.ebuild 793 SHA256 71faa2893b1b1cf14ba75364fb1328feac3ee417f1172fc311612a95ecf23437 SHA512 97556a58f9af6700457e59394bf7bd1fa5fb6712ec7d4658f05b87900121c9b49d2f882753372e220c312e08f1e00484e265531a1022823d01f148bd23a0f789 WHIRLPOOL a17d39b165b30886125a83fc0821464be5f97200a45afaa868cbebe9d20727843e612025cd898068e829787a764fc7f0cefa7613583ea460307b60c5eed1dec6
+MISC ChangeLog 554 SHA256 a20c5e5855652782c6420b5f0fc5b86b48925fff9c5fc5955639dc5007c5dc16 SHA512 ed63827822982703e77774e8f3617a17079a009e8fee6fb2ff20f8a60a21cb55c8fc4cbc1ac8880d0d9ebdfdb029e4a2f5b4f0b71f395e1f9ae0b9549babb70c WHIRLPOOL 396eedeba6ba1e0756b7d1daae5a443c18982085d441c50304192d1ee7b89eb4d8a79bce5894e6741e7bd27167b194d349c314936d77b997b9189be735d65eeb
 MISC metadata.xml 239 SHA256 5d929c534d63615358eacbd035a386109d5deebdc7bb562511b4a6338ee2bbb8 SHA512 ab6b74388bf69a67b0d1f4283475f97eb5a731f31b5c9db4ee50b819a846c77d4ef09f63856e31a68b0bfdf18ee3baa6c76720d4345ccadf154385caaf1033bb WHIRLPOOL bcac6415c046557e53bf04579e077fed4d694dee8f7c0faeecf15f3f036137a2c9f0eaa0c492cecef23a45bd5af2c45542acd26641209d3c9be3108bf1ff09a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRSI7tAAoJEEdUh39IaPFNPr0H+gJvx0BSJTBA5TMTWEXIgmB9
-NR0W4HTtMI82esWR9fAof3jzXpLZGBeXK+bkImjf8c5BgNYZxfe271T4u9ZXg7ps
-k5fMhgUU78HhYZvNxVcYjFVUC+V57ZXrlX50MQqNxQ/v2NHExFBYeeuwCqflj1sh
-FU0/JS1a64OkTUR1MU8lGwBPxCP9bMigAW6LCDZmoNipyiW6tDxi3w2QlBQmrFPT
-HS/5BdRNT5prqWXCAouML1NcbHyL/xtRptrauXiJxx8QpOH1tdFbTZ5P+421zcvI
-NcI8VcPNxhHQAxsxUdYVxmdpuFRCYrQSLI2B0ZMoFE5YWS3WLzEzKiTUHEk3+K8=
-=6T8L
+iQIcBAEBCgAGBQJRbE3pAAoJELp701BxlEWf+7AP/0QdsJyjNc7IHVlK/0Z4pGOa
+XW0eoIpBqlVW/QKe9Hv+juQIr7pKQ2CFPjlzzoYch4yfrnTGiDexjKCUiyCaS8qi
+EyXDt6uBLu4Pd5E/lwH8yIUq9OlJMbsy6D5V9cjYz+Lj+OQf3o2maNDfnI2qzkEx
+3n+OeXg3pm3jJJW8r+7+8HTGsi2Z5IK2hLl90X5WI8dWgcHcYk0Yk6Cw7WQIpNsd
+eC+jngYIElllaWfc5wavXtR/uHPM7rHdpanrX6qp5jtG6/yv4wBuxtBLxKZIhh29
+fgZgTT0v3Whx3Rjxe32rH2go+xZxaBhnRA51Jwp4xT+hzl8/Sg+Rv0hVzpRQYX33
+sasQoAs0GcYRlQXLT4PgjYSKjLL0NDW4LKJIKo4bGLDLkLjE7JkAhZKxXvl85ITG
+iy6IGAYSRHmoZ9vzc5xi7gVZGjg87ilkQ8rLqEi3eaxkfFIf+1wf879uiGsWg5Td
+bELT6qSUSZtIrr6iWAPdwqz6wEfCU+1XWmPk5qm/kyAOla5kqx5Lt5orhRrPuQnI
+XVZWel5ctnNRo3RC6Nl6Z8OOxZpZvFi7vt00Ux18nFi+y0WszKUaLFo5t6G+Iipp
+tWyCR1lTobjQz0CpqX+TFD6WZldCQJJunByX7aPLp4WwBlAS8u6riebLeH+Z8N0D
+j+tK3/z/Fd1ZOTIr2peS
+=gAcl
 -----END PGP SIGNATURE-----
