@@ -1,20 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST introspection-20110205.m4.tar.bz2 1220 SHA256 4394a606d380ae5315872ede35387f104da5fad96794d29c45c444a9d481d8b2 SHA512 5c49239935b93d86cce68b577b43d1a56d8749ab5747029bfcfa67339697134be24ef29ba6c3d133b8c03e867864637c8eb61491a4b7f6bb1e56386ed66cb9be WHIRLPOOL 0765c0a72919b26d0c8c38714450eec578a347bfc1c59d4950b633b64b17aa1cde38dfb87fdcd6e2f364c98d6c0bd3dadaa9c2a9711bd1b5ac09a583b988f500
 DIST libnotify-0.7.5.tar.xz 275804 SHA256 4378cb47874ba4d5f759b7890d8d28d086e81d3f0bd4f6e84e5ab66d82ffb652 SHA512 f4503a4325e6051baaa702c3c49552092e853929688aa569984c4f044595a268256a91c4b68c68af79528e0b50f6e9968a7d55d4cbcdb9679a3376ed9f884285 WHIRLPOOL 5eb4bd5ba8d8aad09a33b44ac43089ac748c0cf810876c797d79c387b4356b522724b3596ff772cd019b80c09785d514c0e097af0a70a21d00e04f30e77ff10c
-EBUILD libnotify-0.7.5-r1.ebuild 1468 SHA256 2ed61abd238b756b54d50305986937cfe5c06aac5cc6ea5aaba9c6a3d4be3697 SHA512 22e59d532bf7c714b1d5f2307a94fe119fa72b41beb1db865ce0b4b5ffc92b67368813ddfec21fc19a997a1698e58e493285db4b9c903f51a8220f5a76cd89b6 WHIRLPOOL 5992f5be913f577e98094527df51baf5181e5685a0d40144ec271d54ef37da99f65a1ab44188e733187352505130443f1aa57935a97504344d7033abc7b132a0
+EBUILD libnotify-0.7.5-r1.ebuild 1461 SHA256 fc0f5057a4242fa9161dbb6d2fe4389b6e2f2f7f9e6665dc5f8a9fb2cf1864b5 SHA512 b9cf19ce718f2a0dd89f9775c16dafd07812a934e571788b8e55f16bc6ae9940d870ca70611d6d615d129da06a71784a1f7433b834e889389cee9240aa25121c WHIRLPOOL 1e466967dcad0467bde08e172d8933f04bf49966ed11bb8aab722702241bdd959f04ccd1952349e71ff81bd3654025df8fca89ac1836cacf6d66df9d13fd4a32
 EBUILD libnotify-0.7.5.ebuild 1560 SHA256 2381e46b9b7a531401dccfc1d913c24c4d6ef7845b115c1317bb6b57a2790964 SHA512 ee9e705344c81c56b0456a04a713ba6a88daf963ed019a8311abec594fb8d23a6a149a4615858f4d732b6789941d5128fc7e6d2cae58d9f22b4af662259cc56a WHIRLPOOL 729f88fc44af26e840cdb03586a3671a85604618549cb1ce454b9c4fb28fa55adaf68c5e7f31c8bc645c8dc44cbb5ff68d61019cc2f3a784768c06c659146cfa
-MISC ChangeLog 12417 SHA256 2988aa36b693a7793e393e6b411bf8e220862476034e68739ecd6db118faff48 SHA512 af912ef63d236accdfef6f749f3af10c1ea2b4158af9a9ab5ee175c949ed4fcf2c4ec8935141f4dec06c6d478d338450ed6e2f07dee3471ce0ba3feb5ef11449 WHIRLPOOL 5a6968005482b026fa8b8e832d6d3f98b8a1edd0c1cd927e8847fb405552ae07e5e28d08328e1bed4177aa1a59d3a48649ae7d10722d4e78d2d3eded996ff995
+MISC ChangeLog 12524 SHA256 c9f213dc512d5dfe44d0960db80254c1554d1c57edf69f2730cde957c2a6ab65 SHA512 ae80775e8c8c3aad19024fd89ec580945bdd40fd463bdc36c55ceccc547b282129162749dd492c70093b89e5c55266e276c4e1d5f20866d377325de2ea6847be WHIRLPOOL 120d399ec38e528852f4917f83c8b5faf253c59b903eeaa6ccfcb4d7bbfb762d7c5f40dd0a9cc03622df3edadd498bf1e9c13df222179eade15b1b6fe8f6e037
 MISC metadata.xml 374 SHA256 2caf7fe34938341ea8d0e0b3cf48c77b042c2883b3559d95dbf1a5bd9cf63a6d SHA512 8d459edc3c03a0353edf518d66586142152d8392a07d9f3a721165f2e853bbde009e341a382cd951a8b025366646b7c25a04017388331edfe56144fe36962d36 WHIRLPOOL 42ebbb9e163b18b1c8927c9e18ee8f014785a066ba9bf3dc08d9220da89bc508dfde195423b7ce42910a50a9326698848d01cb347e315b77187108a2997c0fce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRSe2RAAoJEEdUh39IaPFNxjUIAJZF4Ujjko5dh+msbQX59E82
-NnuB5PmVLg3dgKr9Y4XVBa5ixKeWeD/2iAq6znqACPj9rkHPEPckhZ272wiyB0YX
-kESWB/PkmO6flqCJgSOpYGzRdu+9Bby6ZKk9JHe2SW/jl0ozxyesgPyDx6/Z0Ytt
-dPBxm64ZKRt9UeA3SeRQ/5SJqsjBVrGEvVS/etfM8kLUaUeLitjqk8aqUGCLHudg
-R/A1L2HLuZc2DTiXgSVWL094Vco7kRMol/tyqOMJVd7Yjs95RRK2gyB6a8tJ6B+L
-UFlq8YqrNlZJNwXhAo/j2fQYoHJkGZ3adxQduOK85EOCo4ODLfrmIr4qeofHjA4=
-=rs3b
+iQIcBAEBCgAGBQJRbE3eAAoJELp701BxlEWfTewP/2Tk2csjPLQP6CcoAvTs/N4M
+U6HdmpRNCAUA+diLw1gQna3z9hdYwfTYrjBy/ux5iYVE2V8G221HGWewsPx7yMFI
+sPB7NMXjpmb+5xNZNYF7g0sx7QNTWtknD5fRHXcg6QndqbfF8hAXUrqsWOQVKUqg
+4Co1K31/Q2t9jnoAJInq4HHDCCn8gggulvb49i/jNnXtLTwQLzZszBqcEaSno71i
+I8HXPeHDZpllHzme7v4edOyzVf7n/QMt7afCfUtOwTnPZK7YopUdlshWNSYlnoxR
+IxwRsYwUKHKo/iyorJakmwbsYzCUsC6kEmmQGI+Rw3Q7FkwBWiZTDVUWmQgmmdi8
+Cvx/TLNH6dZZT/DDir8wjlRhUw5YJ11PA30bnha0dhCgVmqOpgaOcxxz2ah7H2xi
+d2IPS9l5pKUz0tzpColuWFTvJJgOUfUZUbF1SuDKaudohLDcaHgX4Y1Q14cwpCHN
+7U/brPdwTvHzkKa14Ct2xaSJh4nPHZk1hTBnwK96/rgmUQcwSjbyRlwSUDV1W651
+WlWRXwTllVA/ADBmcvg5+Ot36YVPtukWhtztkRcTpxgic6Gsne113XDc1S3wsHRD
+Cuah5o2ZxgbT9GcVGrCoDtfVYX9uqVIUqPrKqjbtQpIht264N9bsV7iYQaJThBZK
+xuGaccineuBAohMfNu0V
+=aucb
 -----END PGP SIGNATURE-----
