@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libnotify
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.94 2013/03/20 17:11:19 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.95 2013/04/15 18:58:39 ago Exp $
+
+  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libnotify-0.7.5-r1.ebuild:
+  Stable for amd64, wrt bug #466004
 
   20 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
   libnotify-0.7.5-r1.ebuild:
