@@ -1,10 +1,12 @@
 # ChangeLog for app-admin/eselect-notify-send
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-notify-send/ChangeLog,v 1.1 2013/03/19 16:15:10 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-notify-send/ChangeLog,v 1.2 2013/04/15 18:58:50 ago Exp $
+
+  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
+  Stable for amd64, wrt bug #466004
 
 *eselect-notify-send-0.1 (19 Mar 2013)
 
   19 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
   +files/notify-send.eselect-0.1, +eselect-notify-send-0.1.ebuild:
   Initial commit wrt #379941 by Michał Górny
-
